# hello-qt

./: CMakeLists.txt  README.md  conanfile.py
